--- a/users_service/Dockerfile
+++ b/users_service/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-stretch
-
+COPY requirements.txt /app/requirements.txt
+RUN pip install -r app/requirements.txt
 COPY . /app
 WORKDIR /app
 EXPOSE 8085
-RUN pip install -r requirements.txt
 ENTRYPOINT ["python3","manage.py", "run"]
