--- a/.github/workflows/python_unittest.yml
+++ b/.github/workflows/python_unittest.yml
@@ -2,10 +2,10 @@ name: Run Python Tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   on_build_actions:
@@ -19,6 +19,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r gw/requirements.txt
+          pip install -r gw_service/requirements.txt
       - name: Run Tests    
-        run: python -m unittest gw/test/test_*.py
+        run: python -m unittest gw_service/test/test_*.py
