--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   card:
-    image: card_service:dcomp
+    image: zeed951/card_service:dcomp
     build: 
       context: ./cards_service
       dockerfile: Dockerfile
@@ -11,7 +11,7 @@ services:
     
   
   user:
-    image: user_service:dcomp
+    image: zeed951/user_service:dcomp
     build: 
       context: ./users_service
       dockerfile: Dockerfile  
@@ -19,7 +19,7 @@ services:
       - 8082:1002
 
   order:
-    image: order_service:dcomp
+    image: zeed951/order_service:dcomp
     build: 
       context: ./order_service
       dockerfile: Dockerfile
@@ -28,7 +28,7 @@ services:
       - 8083:1003
 
   gateway:
-    image: gw_service:dcomp
+    image: zeed951/gw_service:dcomp
     build: 
       context: ./gw_service
       dockerfile: Dockerfile   
@@ -36,7 +36,7 @@ services:
       - 8084:8080
   
   auth:
-    image: auth:dcomp
+    image: zeed951/auth:dcomp
     build: 
       context: ./auth_service
       dockerfile: Dockerfile
@@ -45,7 +45,7 @@ services:
       - 8085:1004
 
   client:
-    image: client:dcomp
+    image: zeed951/client:dcomp
     build: 
       context: ./client
       dockerfile: Dockerfile
