--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -58,6 +58,6 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ SSH_PUB_KEY }}
+        key: ${{ secrets.SSH_PUB_KEY }}
         port: 22
         script: whoami
