--- a/.github/workflows/test_ssh.yml
+++ b/.github/workflows/test_ssh.yml
@@ -1,4 +1,4 @@
-name: Run Python Tests
+name: test SSH
 on:
   push:
     branches:
@@ -22,4 +22,4 @@ jobs:
             whoami
             ls -al
             cd congenial-octo-train
-            sudo docker-compose -f docker-compose-prd.yml up --force-recreate 
+            docker-compose -f docker-compose-prd.yml up --force-recreate 
