--- a/order_service/Dockerfile
+++ b/order_service/Dockerfile
@@ -3,5 +3,6 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install -r app/requirements.txt
 COPY . /app
 WORKDIR /app
+RUN python3 manage.py setup_db
 EXPOSE 8083
 ENTRYPOINT ["python3","manage.py", "run"]
