--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -8,11 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps:
-      - name: Generate almost random string
-        run: echo FOO=foobar--$(date +%s) >> $GITHUB_ENV
-      - name: other step that needs FOO
-        run: echo ${{ env.FOO }}
+    steps:      
       - uses: actions/checkout@v2
       - name: Install Python 3
         uses: actions/setup-python@v1
@@ -40,7 +36,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-    
+    - name: Generate almost random string
+        run: echo DOCKER_VERSION=v$(date +%s) >> $GITHUB_ENV    
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -48,7 +45,9 @@ jobs:
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build images
-      run: docker-compose -f "docker-compose.yml" build
+      run: |
+      export DOCKER_VERSION=${{ env.DOCKER_VERSION }}
+      docker-compose -f "docker-compose.yml" build
 
     - name: Push images
       run: docker-compose push
@@ -68,5 +67,6 @@ jobs:
           whoami
           ls -al
           cd congenial-octo-train
+          export DOCKER_VERSION=${{ env.DOCKER_VERSION }}
           docker-compose -f docker-compose-prd.yml up -d --force-recreate 
 
