--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -2,31 +2,31 @@ version: "3.7"
 
 services:
   card:
-    image: zeed951/card_service:dcomp
+    image: zeed951/card_service:{DOCKER_VERSION}
     ports:
       - 8081:1001   
   
   user:
-    image: zeed951/user_service:dcomp
+    image: zeed951/user_service:{DOCKER_VERSION}
     ports:
       - 8082:1002
 
   order:
-    image: zeed951/order_service:dcomp
+    image: zeed951/order_service:{DOCKER_VERSION}
     ports:
       - 8083:1003
 
   gateway:
-    image: zeed951/gw_service:dcomp
+    image: zeed951/gw_service:{DOCKER_VERSION}
     ports:
       - 8084:8080
   
   auth:
-    image: zeed951/auth:dcomp
+    image: zeed951/auth:{DOCKER_VERSION}
     ports:
       - 8085:1004
 
   client:
-    image: zeed951/client:dcomp
+    image: zeed951/client:{DOCKER_VERSION}
     ports:
       - 7777:80
