--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-VUE_APP_CARDS_URL=http://0.0.0.0:8081
-VUE_APP_GW_URL=http://0.0.0.0:8084
-VUE_APP_USERS_URL=http://0.0.0.0:8082
-VUE_APP_ORDERS_URL=http://0.0.0.0:8083
-VUE_APP_AUTH_URL=http://0.0.0.0:8085
+VUE_APP_CARDS_PORT=8081
+VUE_APP_GW_PORT=8084
+VUE_APP_USERS_PORT=8082
+VUE_APP_ORDERS_PORT=8083
+VUE_APP_AUTH_PORT=8085
